@@ -1,4 +1,4 @@
-<div class="horzontal-menu">
+<div class="horzontal-menu" id="{MENU_ID}">
 {CLIP} {PIN_LINK} {ADD_LINK} {ADD_SITE_LINK}
 <ul>{LINKS}</ul>
 <!-- BEGIN admin-link --><div class="horz-link">{PIN_PAGE}<br />{ADMIN_LINK}</div><!-- END admin-link -->
