@@ -1,16 +1,21 @@
-.menu-link-pop { 
+.menu-link-pop {
     display : none;
 }
 
+.menu-admin {
+    position : relative;
+}
 
 .menu-admin:hover .menu-link-pop {
     padding : 3px 1px 2px 1px;
     display : block;
     position : absolute;
-    margin : -8px 0px 0px 0px;
     border : solid 1px black;
     background-color : #d7d7d7;
     color : inherit;
+    top : -2px;
+    left : 0px;
+    width : 120px;
 }
 
 #menu-site-map ol {
